[gd_scene load_steps=3 format=3 uid="uid://daiaf088bqoii"]

[ext_resource type="Script" uid="uid://bterfc3ysab76" path="res://scripts/Shop.gd" id="1_rgcs7"]
[ext_resource type="Script" uid="uid://cgbelsi85bf64" path="res://scripts/MainMenu.gd" id="2_ec5oe"]

[node name="Shop" type="Node2D"]
script = ExtResource("1_rgcs7")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1146.0
offset_bottom = 654.0
color = Color(0.166246, 0.0380521, 0, 0.678431)
script = ExtResource("2_ec5oe")

[node name="CoinsLabel" type="Label" parent="."]
offset_left = 190.0
offset_right = 676.0
offset_bottom = 77.0
text = "Coins:"
horizontal_alignment = 1

[node name="SkinList" type="VBoxContainer" parent="."]
offset_left = 331.0
offset_top = 126.0
offset_right = 594.0
offset_bottom = 211.0

[node name="Return" type="Button" parent="."]
offset_left = 205.0
offset_top = 435.0
offset_right = 708.0
offset_bottom = 495.0
text = "Return"

[node name="MainMenu" type="Button" parent="."]
offset_left = 206.0
offset_top = 511.0
offset_right = 709.0
offset_bottom = 571.0
text = "Main Menu
"

[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
